--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dayz",
   "private": true,
+  "homepage": "https://DeltaDjazz.github.io/dayz",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,11 +9,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "styled-components": "^6.1.17"
   },
@@ -24,6 +29,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   }
